Refactor A LOT of everything. If it was working, it's broken now.