@@ -1,61 +1,79 @@
 package me.hapyl.eterna.module.parkour;
 
-import com.google.common.collect.Lists;
 import com.google.common.collect.Sets;
-import me.hapyl.eterna.Eterna;
+import me.hapyl.eterna.EternaColors;
+import me.hapyl.eterna.module.annotate.DefensiveCopy;
+import me.hapyl.eterna.module.annotate.RequiresVarargs;
 import me.hapyl.eterna.module.component.ComponentList;
 import me.hapyl.eterna.module.hologram.Hologram;
-import me.hapyl.eterna.module.locaiton.LocationHelper;
+import me.hapyl.eterna.module.location.LocationHelper;
 import me.hapyl.eterna.module.registry.Key;
 import me.hapyl.eterna.module.registry.Keyed;
-import me.hapyl.eterna.module.util.BukkitUtils;
-import me.hapyl.eterna.module.util.Named;
+import me.hapyl.eterna.module.component.Named;
+import me.hapyl.eterna.module.util.Ticking;
 import me.hapyl.eterna.module.util.Validate;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
+import net.kyori.adventure.text.format.Style;
 import net.kyori.adventure.text.format.TextDecoration;
-import org.bukkit.*;
+import org.bukkit.Bukkit;
+import org.bukkit.Location;
+import org.bukkit.Material;
 import org.bukkit.entity.Player;
 import org.bukkit.event.player.PlayerTeleportEvent;
+import org.bukkit.event.player.PlayerTeleportEvent.TeleportCause;
+import org.jetbrains.annotations.ApiStatus;
+import org.jetbrains.annotations.NotNull;
 
-import javax.annotation.Nonnull;
-import java.text.SimpleDateFormat;
-import java.util.LinkedList;
+import javax.annotation.OverridingMethodsMustInvokeSuper;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 
 /**
- * Represents a parkour course.
- * <p>Remember to register the parkour!</p>
- *
- * @see me.hapyl.eterna.builtin.manager.ParkourManager#register(Parkour)
+ * Represents a {@link Parkour} course.
  */
-public class Parkour implements Keyed, Named {
+public class Parkour implements Keyed, Named, Ticking {
     
-    public static final Material blockStartFinish;
-    public static final Material blockCheckpoint;
+    /**
+     * Defines the {@link Material} used for start and finish pressure plates.
+     */
+    @NotNull
+    public static final Material MATERIAL_START_AND_FINISH;
     
-    public static final PlayerTeleportEvent.TeleportCause reversedTeleportCauseForCheckpoint;
+    /**
+     * Defines the {@link Material} used for checkpoint pressure plates.
+     */
+    @NotNull
+    public static final Material MATERIAL_CHECKPOINT;
     
-    private static final Location defaultQuitLocation;
-    private static final int hologramViewDistance = 576;
+    /**
+     * Defines the {@link TeleportCause} which is ignored for {@link FailType#TELEPORT}.
+     */
+    @NotNull
+    public static final PlayerTeleportEvent.TeleportCause RESERVED_TELEPORT_CAUSE;
+    
+    @NotNull
+    private static final Location DEFAULT_QUIT_LOCATION;
+    
+    private static final int HOLOGRAM_VIEW_DISTANCE = 576;
     
     static {
-        blockStartFinish = Material.LIGHT_WEIGHTED_PRESSURE_PLATE;
-        blockCheckpoint = Material.HEAVY_WEIGHTED_PRESSURE_PLATE;
+        MATERIAL_START_AND_FINISH = Material.LIGHT_WEIGHTED_PRESSURE_PLATE;
+        MATERIAL_CHECKPOINT = Material.HEAVY_WEIGHTED_PRESSURE_PLATE;
         
-        reversedTeleportCauseForCheckpoint = PlayerTeleportEvent.TeleportCause.UNKNOWN;
+        RESERVED_TELEPORT_CAUSE = PlayerTeleportEvent.TeleportCause.UNKNOWN;
         
-        defaultQuitLocation = BukkitUtils.defLocation(0, BukkitUtils.defWorld().getHighestBlockYAt(0, 0) + 1, 0);
+        DEFAULT_QUIT_LOCATION = LocationHelper.defaultLocation(0, LocationHelper.defaultWorld().getHighestBlockYAt(0, 0) + 1, 0);
     }
     
+    protected final List<ParkourPosition> checkpoints;
+    
     private final Key key;
-    private final String name;
+    private final Component name;
     private final ParkourPosition start;
     private final ParkourPosition finish;
-    
-    private final List<ParkourPosition> checkpoints;
     private final Set<Hologram> holograms;
     private final Set<FailType> allowedFails;
     
@@ -63,34 +81,40 @@ public class Parkour implements Keyed, Named {
     private Difficulty difficulty;
     private Location quitLocation;
     
-    public Parkour(@Nonnull Key key, @Nonnull String name, @Nonnull ParkourPosition start, @Nonnull ParkourPosition finish) {
+    public Parkour(@NotNull Key key, @NotNull Component name, @NotNull ParkourPosition.Builder positionBuilder) {
         this.key = key;
         this.name = name;
-        this.start = start;
-        this.finish = finish;
-        this.checkpoints = Lists.newLinkedList();
+        this.start = positionBuilder.start;
+        this.finish = positionBuilder.finish;
+        this.checkpoints = List.copyOf(positionBuilder.checkpoints);
         this.holograms = Sets.newHashSet();
         this.allowedFails = Sets.newHashSet();
         this.formatter = ParkourFormatter.DEFAULT;
         this.difficulty = Difficulty.NORMAL;
-        this.quitLocation = defaultQuitLocation;
+        this.quitLocation = DEFAULT_QUIT_LOCATION;
+        
+        // Register the parkour
+        ParkourHandler.handler.register(key, this);
+        
+        // Create entities
+        this.createWorldEntities();
     }
     
     /**
-     * Starts this parkour for the given player.
+     * Starts this {@link Parkour} for the given {@link Player}.
      *
-     * @param player - The player who starts the parkour.
+     * @param player - The player for whom to start the parkour.
      */
-    public void start(@Nonnull Player player) {
-        Eterna.getManagers().parkour.start(player, this);
+    public void start(@NotNull Player player) {
+        ParkourHandler.handler.start(player, this);
     }
     
     /**
      * Gets the current {@link ParkourFormatter}.
      *
-     * @return the current {@link ParkourFormatter}.
+     * @return the current parkour formatter.
      */
-    @Nonnull
+    @NotNull
     public ParkourFormatter getFormatter() {
         return formatter;
     }
@@ -100,322 +124,174 @@ public class Parkour implements Keyed, Named {
      *
      * @param formatter - The new formatter.
      */
-    public void setFormatter(@Nonnull ParkourFormatter formatter) {
+    public void setFormatter(@NotNull ParkourFormatter formatter) {
         this.formatter = Objects.requireNonNull(formatter, "Formatter must not be null!");
     }
     
     /**
-     * Gets the quit location of this parkour.
-     * <p>The location is used to teleport player upon quitting/finishing the parkour.</p>
+     * Gets the quit {@link Location} of this {@link Parkour}, which is used to teleport the {@link Player} upon quiting the parkour.
      *
      * @return the quit location of this parkour.
      */
-    @Nonnull
+    @NotNull
+    @DefensiveCopy
     public Location getQuitLocation() {
-        return quitLocation;
+        return LocationHelper.copyOf(this.quitLocation);
     }
     
     /**
-     * Sets the quit location of this parkour.
-     * <p>The location is used to teleport player upon quitting/finishing the parkour.</p>
+     * Sets the quit {@link Location} of this {@link Parkour}, which is used to teleport the {@link Player} upon quting the parkour.
      *
      * @param quitLocation - The new quit location.
      */
-    public void setQuitLocation(@Nonnull Location quitLocation) {
-        this.quitLocation = quitLocation;
+    public void setQuitLocation(@NotNull @DefensiveCopy Location quitLocation) {
+        this.quitLocation = LocationHelper.copyOf(quitLocation);
     }
     
     /**
-     * Gets whether the given {@link FailType} is allowed by this parkour.
-     * <p>This is really only useful for {@link FailType#EFFECT_CHANGE} when you want to add something along the lines of Jump Boost parkour.</p>
+     * Gets whether the given {@link FailType} is permitted by this {@link Parkour}.
      *
      * @param type - The fail type to check.
-     * @return {@code true} if the given {@link FailType} is permitted; {@code false} otherwise.
+     * @return {@code true} if the given fail type is permitted; {@code false} otherwise.
      */
-    public boolean isFailAllowed(@Nonnull FailType type) {
-        return allowedFails.contains(type);
+    public boolean isFailAllowed(@NotNull FailType type) {
+        return this.allowedFails.contains(type);
     }
     
     /**
-     * Sets the {@link FailType} that are permissted by this parkour.
+     * Sets the {@link FailType} that are permitted by this {@link Parkour}.
      *
-     * @param fails - The fails to set.
+     * @param failTypes - The fail types to set.
+     * @throws IllegalArgumentException if no varargs are provided.
      */
-    public void setAllowedFails(@Nonnull FailType... fails) {
-        Validate.isTrue(fails.length > 0, "There must be at least one fail type!");
-        
-        allowedFails.clear();
-        allowedFails.addAll(List.of(fails));
+    public void setAllowedFails(@NotNull @RequiresVarargs FailType... failTypes) {
+        this.allowedFails.clear();
+        this.allowedFails.addAll(Arrays.asList(Validate.varargs(failTypes)));
     }
     
     /**
-     * Gets the text of the 'start' hologram.
+     * Gets the {@link ComponentList} used for {@code start} {@link Hologram}.
      *
-     * @return the text of the 'start' hologram.
+     * @return the component list used for {@code start} hologram.
      */
-    @Nonnull
+    @NotNull
     public ComponentList hologramTextStart() {
         return ComponentList.of(
-                Component.text(name, NamedTextColor.GOLD, TextDecoration.BOLD),
-                Component.text("Start", NamedTextColor.GREEN)
+                name.style(Style.style(EternaColors.AMBER, TextDecoration.BOLD)),
+                Component.text("Start", EternaColors.GREEN)
         );
     }
     
     /**
-     * Gets the text of the 'finish' hologram.
+     * Gets the {@link ComponentList} used for {@code finish} {@link Hologram}.
      *
-     * @return the text of the 'finish' hologram.
+     * @return the component list used for {@code finish} hologram.
      */
-    @Nonnull
+    @NotNull
     public ComponentList hologramTextFinish() {
         return ComponentList.of(
-                Component.text(name, NamedTextColor.GOLD, TextDecoration.BOLD),
+                name.style(Style.style(EternaColors.AMBER, TextDecoration.BOLD)),
                 Component.text("Finish", NamedTextColor.GREEN)
         );
     }
     
     /**
-     * Gets the text of the 'checkpoint' hologram.
+     * Gets the {@link ComponentList} used for {@code checkpoint} {@link Hologram}.
      *
      * @param nth - The index of the checkpoint, starting at {@code 1}.
      * @param max - The max number of checkpoint.
-     * @return the text of the 'checkpoint' hologram.
+     * @return the component list used for {@code checkpoint} hologram.
      */
-    @Nonnull
+    @NotNull
     public ComponentList hologramTextCheckpoint(int nth, int max) {
         return ComponentList.of(
-                Component.text("Checkpoint ", NamedTextColor.GREEN)
-                         .append(Component.text("(%s/%s)".formatted(nth, max), NamedTextColor.GRAY))
+                Component.empty()
+                         .append(Component.text("Checkpoint ", EternaColors.GREEN))
+                         .append(Component.text("(%s/%s)".formatted(nth, max), EternaColors.GRAY))
         );
     }
     
     /**
-     * Creates the holograms for 'start', 'finish' and checkpoints.
-     */
-    public void createHolograms() {
-        makeHologram(start.getLocationCentered(), hologramTextStart());
-        makeHologram(finish.getLocationCentered(), hologramTextFinish());
-        
-        final int checkpointsSize = checkpoints.size();
-        
-        for (int i = 0; i < checkpointsSize; i++) {
-            final ParkourPosition current = checkpoints.get(i);
-            
-            makeHologram(current.getLocationCentered(), hologramTextCheckpoint(i + 1, checkpointsSize));
-        }
-    }
-    
-    /**
-     * Shows the holograms for the given player.
+     * Gets the {@link Difficulty} of this {@link Parkour}.
      *
-     * @param player - The player to show for.
+     * @return the difficulty of this parkour.
      */
-    public void showHolograms(@Nonnull Player player) {
-        this.holograms.forEach(holo -> holo.show(player));
-    }
-    
-    /**
-     * Hides the holograms for the given player.
-     *
-     * @param player - The player to hide for.
-     */
-    public void hideHolograms(@Nonnull Player player) {
-        this.holograms.forEach(holo -> holo.hide(player));
-    }
-    
-    /**
-     * Gets the {@link Difficulty} of this parkour.
-     *
-     * @return the {@link Difficulty} of this parkour.
-     */
-    @Nonnull
+    @NotNull
     public Difficulty getDifficulty() {
         return difficulty;
     }
     
-    
     /**
-     * Sets the {@link Difficulty} of this parkour.
+     * Sets the {@link Difficulty} of this {@link Parkour}.
      *
      * @param difficulty - The new difficulty.
      */
-    public void setDifficulty(@Nonnull Difficulty difficulty) {
+    public void setDifficulty(@NotNull Difficulty difficulty) {
         this.difficulty = difficulty;
     }
     
     /**
-     * Gets the name of this parkour.
+     * Gets the name of this {@link Parkour}.
      *
      * @return the name of this parkour.
      */
-    @Nonnull
     @Override
-    public String getName() {
+    @NotNull
+    public Component getName() {
         return name;
     }
     
     /**
-     * Adds a checkpoint for this parkour.
+     * Gets the {@code start} {@link ParkourPosition} of this {@link Parkour}
      *
-     * @param position - The checkpoint position.
+     * @return the {@code start} position of this parkour.
      */
-    public void addCheckpoint(@Nonnull ParkourPosition position) {
-        this.checkpoints.stream()
-                        .filter(position::equals)
-                        .findFirst()
-                        .ifPresent(e -> {
-                            throw new IllegalArgumentException("Parkour already exists on position: %s!".formatted(position));
-                        });
-        
-        this.checkpoints.add(position);
-    }
-    
-    /**
-     * Adds a checkpoint for this parkour.
-     *
-     * @param location - The location of the checkpoint.
-     */
-    public void addCheckpoint(@Nonnull Location location) {
-        this.addCheckpoint(ParkourPosition.of(location));
-    }
-    
-    /**
-     * Adds a checkpoint for this parkour.
-     *
-     * @param world - The world.
-     * @param x     - The {@code X} coordinate.
-     * @param y     - The {@code Y} coordinate.
-     * @param z     - The {@code Z} coordinate.
-     * @param yaw   - The yaw.
-     * @param pitch - The pitch.
-     */
-    public void addCheckpoint(@Nonnull World world, int x, int y, int z, float yaw, float pitch) {
-        this.addCheckpoint(ParkourPosition.of(world, x, y, z, yaw, pitch));
-    }
-    
-    /**
-     * Adds a checkpoint for this parkour.
-     * <p>This method uses the <i>default</i> world.</p>
-     *
-     * @param x     - The {@code X} coordinate.
-     * @param y     - The {@code Y} coordinate.
-     * @param z     - The {@code Z} coordinate.
-     * @param yaw   - The yaw.
-     * @param pitch - The pitch.
-     */
-    public void addCheckpoint(int x, int y, int z, float yaw, float pitch) {
-        this.addCheckpoint(ParkourPosition.of(BukkitUtils.defWorld(), x, y, z, yaw, pitch));
-    }
-    
-    /**
-     * Gets the 'start' of this parkour.
-     *
-     * @return the 'start' of this parkour.
-     */
-    @Nonnull
+    @NotNull
     public ParkourPosition getStart() {
-        return start;
+        return this.start;
     }
     
     /**
-     * Gets the 'finish' of this parkour.
+     * Gets the {@code finish} {@link ParkourPosition} of this {@link Parkour}
      *
-     * @return the 'finish' of this parkour.
+     * @return the {@code finish} position of this parkour.
      */
-    @Nonnull
+    @NotNull
     public ParkourPosition getFinish() {
-        return finish;
+        return this.finish;
     }
     
     /**
-     * Gets a <b>mutable</b> copy of all the checkpoints.
+     * Gets an <b>immutable</b> copy of all checkpoints.
      *
-     * @return a <b>mutable</b> copy of all the checkpoints.
+     * @return an <b>immutable</b> copy of all checkpoints.
      */
-    @Nonnull
-    public LinkedList<ParkourPosition> getCheckpoints() {
-        return Lists.newLinkedList(checkpoints);
+    @NotNull
+    public List<ParkourPosition> getCheckpoints() {
+        return List.copyOf(this.checkpoints);
     }
     
+    /**
+     * Gets the number of total checkpoints for this {@link Parkour}.
+     *
+     * @return the number of total checkpoints for this parkour.
+     */
     public int checkpointCount() {
         return checkpoints.size();
     }
     
-    public boolean isCheckpoint(Location location) {
-        for (ParkourPosition checkpoint : getCheckpoints()) {
-            if (checkpoint.compare(location)) {
-                return true;
-            }
-        }
-        return false;
-    }
-    
     /**
-     * Spawns all world entities, which includes pressure plates and holograms.
+     * Ticks this {@link Parkour}.
      */
-    public void createWorldEntities() {
-        this.start.setBlock(blockStartFinish);
-        this.finish.setBlock(blockStartFinish);
-        
-        this.checkpoints.forEach(position -> position.setBlock(blockCheckpoint));
-        
-        this.createHolograms();
-    }
-    
-    /**
-     * Removes all world entities, which includes pressure plates and holograms.
-     */
-    public void removeWorldEntities() {
-        this.start.restoreBlock();
-        this.finish.restoreBlock();
-        
-        this.checkpoints.forEach(ParkourPosition::restoreBlock);
-        
-        this.holograms.forEach(Hologram::destroy);
-        this.holograms.clear();
-    }
-    
-    @Nonnull
-    public String formatTime(long millis) {
-        if (millis >= 3600000) {
-            return new SimpleDateFormat("HH:mm:ss.SSS").format(millis);
-        }
-        else if (millis >= 60000) {
-            return new SimpleDateFormat("mm:ss.SSS").format(millis);
-        }
-        else {
-            return new SimpleDateFormat("ss.SSS").format(millis);
-        }
-    }
-    
-    @Nonnull
     @Override
-    public final Key getKey() {
-        return key;
-    }
-    
-    @Override
-    public final boolean equals(Object o) {
-        if (o == null || getClass() != o.getClass()) {
-            return false;
-        }
-        
-        final Parkour that = (Parkour) o;
-        return Objects.equals(this.key, that.key);
-    }
-    
-    @Override
-    public final int hashCode() {
-        return Objects.hashCode(this.key);
-    }
-    
-    public void tickHolograms() {
+    @OverridingMethodsMustInvokeSuper
+    public void tick() {
         Bukkit.getOnlinePlayers().forEach(player -> {
             final Location location = player.getLocation();
             
             for (Hologram hologram : holograms) {
                 final double distanceSquared = LocationHelper.distanceSquared(hologram.getLocation(), location);
-                final boolean canBeSeen = distanceSquared <= hologramViewDistance;
+                final boolean canBeSeen = distanceSquared <= HOLOGRAM_VIEW_DISTANCE;
                 final boolean showingTo = hologram.isShowingTo(player);
                 
                 if (canBeSeen && !showingTo) {
@@ -428,10 +304,83 @@ public class Parkour implements Keyed, Named {
         });
     }
     
-    private void makeHologram(Location location, ComponentList text) {
+    /**
+     * Gets the {@link Key} of this {@link Parkour}.
+     *
+     * @return the key of this parkour.
+     */
+    @NotNull
+    @Override
+    public final Key getKey() {
+        return key;
+    }
+    
+    @Override
+    public final int hashCode() {
+        return Objects.hashCode(this.key);
+    }
+    
+    @Override
+    public final boolean equals(Object o) {
+        if (o == null || getClass() != o.getClass()) {
+            return false;
+        }
+        
+        final Parkour that = (Parkour) o;
+        return Objects.equals(this.key, that.key);
+    }
+    
+    @ApiStatus.Internal
+    private void createWorldEntities() {
+        this.start.setBlock(MATERIAL_START_AND_FINISH);
+        this.finish.setBlock(MATERIAL_START_AND_FINISH);
+        
+        this.checkpoints.forEach(position -> position.setBlock(MATERIAL_CHECKPOINT));
+        
+        this.createHolograms();
+    }
+    
+    @ApiStatus.Internal
+    private void createHolograms() {
+        makeHologram(start.getLocationCentered(), hologramTextStart());
+        makeHologram(finish.getLocationCentered(), hologramTextFinish());
+        
+        final int checkpointsSize = checkpoints.size();
+        
+        for (int i = 0; i < checkpointsSize; i++) {
+            final ParkourPosition current = checkpoints.get(i);
+            
+            makeHologram(current.getLocationCentered(), hologramTextCheckpoint(i + 1, checkpointsSize));
+        }
+    }
+    
+    @ApiStatus.Internal
+    private void makeHologram(@NotNull Location location, @NotNull ComponentList text) {
         final Hologram hologram = Hologram.ofArmorStand(location);
         hologram.setLines(p -> text);
         
         this.holograms.add(hologram);
     }
+    
+    @ApiStatus.Internal
+    void removeWorldEntities() {
+        this.start.restoreBlock();
+        this.finish.restoreBlock();
+        
+        this.checkpoints.forEach(ParkourPosition::restoreBlock);
+        
+        this.holograms.forEach(Hologram::dispose);
+        this.holograms.clear();
+    }
+    
+    @ApiStatus.Internal
+    void showHolograms(@NotNull Player player) {
+        this.holograms.forEach(holo -> holo.show(player));
+    }
+    
+    @ApiStatus.Internal
+    void hideHolograms(@NotNull Player player) {
+        this.holograms.forEach(holo -> holo.hide(player));
+    }
+    
 }
